--- a/css/queries.css
+++ b/css/queries.css
@@ -36,6 +36,11 @@
 		font-size: 20px;
 		padding: 10px;
 	}
+	.mission-statement p {
+    margin: 10px 15px 10px;
+    border-top: 2px solid #808080;
+    padding: 5px 20px 5px;
+	}
 }
 	
 @media (max-width: 600px)
@@ -51,5 +56,11 @@
 	h2
 	{
 		font-size: 1.7em;
+	}
+	.mission-statement p
+	{
+		margin: 8px 30px 8px;
+		border-top: 2px solid #808080;
+		padding: 8px 30px 8px;
 	}
 }
